tests/conformance/negative/15-enum-without-values.sml
<!-- Enum param without values attribute should be a validation error -->
<skill define="interface" name="bad-enum">
  <param name="mode" type="enum">Missing values</param>
</skill>
